# allocator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
include/: block_allocator.h  containers.h  factorial.h  foo.h  loggable_memory_management.h  stdafx.h  traits.h
src/: CMakeLists.txt  allocator.cpp  foo.cpp  foo.h  loggable_memory_managment.cpp  main.cpp  stdafx.h  test.cpp
src/test/: old_test.cpp  test_allocator.cpp  test_factorial.cpp  test_list.cpt  test_simple_list.cpp
